# C-Cplusplus

./: .gitignore  CMakeLists.txt  README.md  main.c
.github/workflows/: myCI.yml
IZ1/: .gitignore  README.md  main.c
IZ1/.github/workflows/: myCI.yml
IZ1/bodies/: my_countries.c  my_string.c
IZ1/headers/: my_countries.h
IZ1/tests/: countries_tests.cpp  string_tests.cpp
IZ2/: .gitignore
IZ2/tests/: parallel_tests.cpp
bodies/: io.c
file_lib/: file.c  file.h
headers/: my_string.h
tests/: consist_tests.cpp  file_tests.cpp  io_tests.cpp  parallel_tests.cpp
